--- a/Implementation/AwesomePokerGameSln/AwesomePokerGameSln.csproj
+++ b/Implementation/AwesomePokerGameSln/AwesomePokerGameSln.csproj
@@ -49,11 +49,23 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Code\CardImageHelper.cs" />
-    <Compile Include="Emote_Window.cs">
+    <Compile Include="DabOnHaters.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Emote_Window.Designer.cs">
-      <DependentUpon>Emote_Window.cs</DependentUpon>
+    <Compile Include="DabOnHaters.Designer.cs">
+      <DependentUpon>DabOnHaters.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Emote_Options.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Emote_Options.Designer.cs">
+      <DependentUpon>Emote_Options.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Interactions_Window.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Interactions_Window.Designer.cs">
+      <DependentUpon>Interactions_Window.cs</DependentUpon>
     </Compile>
     <Compile Include="Fiddle.cs">
       <SubType>Form</SubType>
@@ -75,8 +87,14 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Emote_Window.resx">
-      <DependentUpon>Emote_Window.cs</DependentUpon>
+    <EmbeddedResource Include="DabOnHaters.resx">
+      <DependentUpon>DabOnHaters.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Emote_Options.resx">
+      <DependentUpon>Emote_Options.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Interactions_Window.resx">
+      <DependentUpon>Interactions_Window.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Fiddle.resx">
       <DependentUpon>Fiddle.cs</DependentUpon>
@@ -313,6 +331,8 @@
     <None Include="Resources\queen_of_spades2.png" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Resources\BettyDab.gif" />
+    <None Include="Resources\BettyDab1.gif" />
     <Content Include="Resources\Chip_Fiddle.gif" />
     <None Include="Resources\Chip_Fiddle1.gif" />
   </ItemGroup>
