--- a/Implementation/AwesomePokerGameSln/AwesomePokerGameSln.csproj
+++ b/Implementation/AwesomePokerGameSln/AwesomePokerGameSln.csproj
@@ -61,6 +61,12 @@
     <Compile Include="Emote_Options.Designer.cs">
       <DependentUpon>Emote_Options.cs</DependentUpon>
     </Compile>
+    <Compile Include="Flexing.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Flexing.Designer.cs">
+      <DependentUpon>Flexing.cs</DependentUpon>
+    </Compile>
     <Compile Include="Interactions_Window.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,6 +98,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Emote_Options.resx">
       <DependentUpon>Emote_Options.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Flexing.resx">
+      <DependentUpon>Flexing.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Interactions_Window.resx">
       <DependentUpon>Interactions_Window.cs</DependentUpon>
@@ -332,6 +341,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\BettyDab.gif" />
+    <None Include="Resources\Flexing.gif" />
     <None Include="Resources\BettyDab1.gif" />
     <Content Include="Resources\Chip_Fiddle.gif" />
     <None Include="Resources\Chip_Fiddle1.gif" />
