--- a/Implementation/AwesomePokerGameSln/AwesomePokerGameSln.csproj
+++ b/Implementation/AwesomePokerGameSln/AwesomePokerGameSln.csproj
@@ -343,6 +343,7 @@
     <Content Include="Resources\BettyDab.gif" />
     <None Include="Resources\Flexing.gif" />
     <None Include="Resources\BettyDab1.gif" />
+    <None Include="Resources\card-background1.png" />
     <Content Include="Resources\Chip_Fiddle.gif" />
     <None Include="Resources\Chip_Fiddle1.gif" />
     <None Include="Resources\flush.png" />
